# HR-ERP

./: .dockerignore  .env.example  .gitignore  .prettierignore  .releaserc.json  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODEBASE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FRONTEND.md  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  prisma.config.ts  tsconfig.json  vercel.json  vitest.config.mts  vitest.config.ui.mts
.corp-harness/: site.json
.cursor/: README.md  environment.json  governance-overlay.yaml  hooks.json  mcp.json  worktrees.json
.github/: CODEOWNERS  dependabot.yml  lychee.toml  pull_request_template.md
.harness/: profile.yaml
contracts/: .spectral.yaml  README.md
docker/: README.md  compose.app.yml
docs/: DEVELOPMENT.md  QA.md  README.md  anonymization.md
lib/: README.md  prisma-errors.ts  prisma.ts  redis.ts
notebooks/: README.md
prisma/: schema.prisma
public/: manifest.webmanifest  service-worker.js
scripts/: README.md  adversarial-probes.ts  adversarial.sh  backfill-webhook-secret-encryption.ts  bootstrap-local-demo.ts  capture-screenshots.mjs  check-ess-design-tokens.mjs  check-lib-module-boundaries.mjs  check-migration-timestamps.mjs  check-openapi-drift.mjs  check-route-policy-parity.mjs  check-stub-canary.sh  ci-issue-e2e-jwts.mjs  copilot-mcp-server.ts  core-hr-adversarial-suite.ts  (+40 more)
services/ml-serving/: churn_api.py  pyproject.toml
services/ml-serving/artifacts/: .gitkeep
(+1001 files in other folders)
