[project]
name = "hr-erp-ml-serving"
version = "0.1.0"
description = "FastAPI service for churn scoring (joblib model)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "numpy>=2.0.0",
  "scikit-learn>=1.5.0",
  "joblib>=1.4.0",
  "pydantic>=2.0.0",
]

[tool.uv]
dev-dependencies = []
